--- a/package.json
+++ b/package.json
@@ -4,9 +4,15 @@
   "dependencies": {
     "@hotwired/stimulus": "^3.0.1",
     "@hotwired/turbo-rails": "^7.1.1",
-    "esbuild": "^0.14.25"
+    "@types/react": "^17.0.40",
+    "@types/react-dom": "^17.0.13",
+    "esbuild": "^0.14.25",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "typescript": "^4.6.2"
   },
   "scripts": {
-    "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds"
+    "build": "esbuild app/javascript/application.tsx --bundle --sourcemap --outdir=app/assets/builds",
+    "check-types": "tsc --project tsconfig.json --noEmit --watch --preserveWatchOutput"
   }
 }
