--- a/package.json
+++ b/package.json
@@ -14,5 +14,17 @@
   "scripts": {
     "build": "esbuild app/javascript/application.tsx --bundle --sourcemap --outdir=app/assets/builds",
     "check-types": "tsc --project tsconfig.json --noEmit --watch --preserveWatchOutput"
+  },
+  "devDependencies": {
+    "@types/webpack-env": "^1.16.3",
+    "@typescript-eslint/eslint-plugin": "^5.14.0",
+    "@typescript-eslint/parser": "^5.14.0",
+    "eslint": "^8.11.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-preact": "^1.3.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.29.3",
+    "eslint-plugin-react-hooks": "^4.3.0"
   }
 }
